# vlsi-physical-design

./: .gitignore  Cargo.toml  README.md  config_random.toml
cli/: Cargo.toml
cli/src/: main.rs
common/: Cargo.toml
common/src/: lib.rs
common/src/db/: core.rs  indices.rs  mod.rs
common/src/db/parser/: bookshelf.rs  def.rs  lef.rs  mod.rs
common/src/geom/: coord.rs  mod.rs  point.rs  rect.rs  rtree.rs
common/src/util/: check.rs  config.rs  generator.rs  logger.rs  mod.rs  profiler.rs  visualization.rs
configs/: config_gcd.toml  config_ibm01.toml  config_random.toml
inputs/: simple.def  simple.lef
placer/: Cargo.toml
placer/src/: lib.rs
placer/src/legalize/: abacus.rs  mod.rs  tetris.rs
placer/src/physics/: electrostatics.rs  mod.rs  wirelength.rs
placer/src/solver/: mod.rs  nesterov.rs  preconditioner.rs  traits.rs
router/: Cargo.toml
router/src/: detailed_router.rs  global_router.rs  lib.rs
router/src/algo/: astar.rs
router/src/grid/: dense.rs  mod.rs
router/src/utils/: conversion.rs
scripts/: benchmark.py
